--- a/src/styles/base/fonts.css
+++ b/src/styles/base/fonts.css
@@ -1,8 +1,37 @@
+/*Proxima Nova*/
+
 @font-face {
-                font-family: BebasNeue;
-                font-display: swap;
-                src: url("../fonts/BebasNeue-Regular.woff2") format("woff2"),
-                     url("../fonts/BebasNeue-Regular.woff") format("woff");
-                font-weight: 400;
-                font-style: normal;
-              }
+    font-family: "ProximaNova";
+    src: local("ProximaNova"),
+    url("../../fonts/ProximaNova/ProximaNova-Light.woff2") format("woff2"),
+    url("../../fonts/ProximaNova/ProximaNova-Light.woff") format("woff");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova";
+    src: local("ProximaNova"),
+    url("../../fonts/ProximaNova/ProximaNova-Regular.woff2") format("woff2"),
+    url("../../fonts/ProximaNova/ProximaNova-Regular.woff") format("woff");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova";
+    src: local("ProximaNova"),
+    url("../../fonts/ProximaNova/ProximaNova-Semibold.woff2") format("woff2"),
+    url("../../fonts/ProximaNova/ProximaNova-Semibold.woff") format("woff");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ProximaNova";
+    src: local("ProximaNova"),
+    url("../../fonts/ProximaNova/ProximaNova-Bold.woff2") format("woff2"),
+    url("../../fonts/ProximaNova/ProximaNova-Bold.woff") format("woff");
+    font-weight: 700;
+    font-style: normal;
+}
