--- a/src/styles/base/main.scss
+++ b/src/styles/base/main.scss
@@ -1,107 +1,75 @@
-@import 'base/fonts.css';
+/*Common styles*/
+@import "fonts.css";
+@import "../vendor/normalize.css";
+
+* {
+  font-family: "Proxima Nova", "Arial", sans-serif;
+}
+
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+main {
+  min-height: 100vh;
+}
 
 body {
+  background-color: #F5F5F5;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: auto;
+}
+
+section {
+  position: relative;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul {
+  list-style-type: none;
   margin: 0;
-  font-family: 'BebasNeue', 'Arial', sans-serif;
-  font-size: 12px;
-  line-height: 20px;
-  font-weight: 500;
-  color: #000000;
+  padding: 0;
+}
+
+a {
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+img {
+  pointer-events: none;
+}
+
+.absolute-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 1px !important;
+  height: 1px !important;
+  white-space: nowrap !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 .container {
-  max-width: 760px;
-  margin: 0 auto;
-}
-
-.main-header {
-  display: flex;
-  padding: 10px;
-  background-color: hsl(200, 50%, 80%);
-  .nav-list {
-    display: flex;
-    width: 600px;
-    justify-content: space-between;
-  }
-}
-
-.phone-number,
-.nav-list__link {
-  font-size: 20px;
-  color: hsl(200, 50%, 0%);
-  text-decoration: none;
-}
-
-.main__title {
-  margin: 0;
-  padding: 20px;
-  color: hsl(0, 100%, 50%);
-  font-size: 50px;
-  line-height: 1.3;
-  text-shadow: 0 0 1px hsl(0, 100%, 20%);
-}
-
-.main__content {
-  position: relative;
-  min-height: 400px;
-  background-color: hsl(200, 50%, 80%);
-  background-image: url('@img/Night_sky.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  &::after {
-    content: 'Вставка изображения через css свойство background';
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: #ffffff;
-  }
-}
-
-.description {
-  margin: 0;
-  padding: 10px 10px 45px;
-  background-color: hsl(200, 50%, 80%);
-  opacity: 0.9;
-}
-
-.main-footer {
-  padding: 20px;
-  background-color: hsl(200, 50%, 80%);
-  img {
-    display: block;
-    border-radius: 5%;
-  }
-}
-
-.main-footer__content {
-  display: flex;
-  justify-content: space-around;
-}
-
-.main-footer__wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.main-footer__title {
-  margin: 0 0 10px;
-}
-
-.main-footer__link {
-  margin-top: 5px;
-  color: #000000;
-  text-transform: uppercase;
-}
-
-@media (max-width: 768px) {
-  body {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 768px) {
-  main {
-    color: salmon;
-  }
+  padding: 0 65px;
 }
