change style file structure

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 /*Common styles*/
-@import "fonts.css";
-@import "../vendor/normalize.css";
+@import "base/fonts.css";
+@import "vendor/normalize.css";
 
 * {
   font-family: "Proxima Nova", "Arial", sans-serif;
