--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 /*Common styles*/
 @import "base/fonts.css";
 @import "vendor/normalize.css";
-@import "helpers/variables";
+@import "helpers/variables.scss";
 
 * {
   font-family: "Proxima Nova", "Arial", sans-serif;
