finish css gulp task

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 /*Common styles*/
-@import "base/fonts.css";
-@import "vendor/normalize.css";
-@import "helpers/variables.scss";
+@import "base/fonts";
+@import "vendor/normalize";
+@import "helpers/variables";
 
 * {
   font-family: "Proxima Nova", "Arial", sans-serif;
