--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -3,8 +3,8 @@
 @font-face {
     font-family: "ProximaNova";
     src: local("ProximaNova"),
-    url("../../fonts/ProximaNova/ProximaNova-Light.woff2") format("woff2"),
-    url("../../fonts/ProximaNova/ProximaNova-Light.woff") format("woff");
+    url("fonts/ProximaNova/ProximaNova-Light.woff2") format("woff2"),
+    url("fonts/ProximaNova/ProximaNova-Light.woff") format("woff");
     font-weight: 300;
     font-style: normal;
 }
@@ -12,8 +12,8 @@
 @font-face {
     font-family: "ProximaNova";
     src: local("ProximaNova"),
-    url("../../fonts/ProximaNova/ProximaNova-Regular.woff2") format("woff2"),
-    url("../../fonts/ProximaNova/ProximaNova-Regular.woff") format("woff");
+    url("fonts/ProximaNova/ProximaNova-Regular.woff2") format("woff2"),
+    url("fonts/ProximaNova/ProximaNova-Regular.woff") format("woff");
     font-weight: 400;
     font-style: normal;
 }
@@ -21,8 +21,8 @@
 @font-face {
     font-family: "ProximaNova";
     src: local("ProximaNova"),
-    url("../../fonts/ProximaNova/ProximaNova-Semibold.woff2") format("woff2"),
-    url("../../fonts/ProximaNova/ProximaNova-Semibold.woff") format("woff");
+    url("fonts/ProximaNova/ProximaNova-Semibold.woff2") format("woff2"),
+    url("fonts/ProximaNova/ProximaNova-Semibold.woff") format("woff");
     font-weight: 600;
     font-style: normal;
 }
@@ -30,8 +30,8 @@
 @font-face {
     font-family: "ProximaNova";
     src: local("ProximaNova"),
-    url("../../fonts/ProximaNova/ProximaNova-Bold.woff2") format("woff2"),
-    url("../../fonts/ProximaNova/ProximaNova-Bold.woff") format("woff");
+    url("fonts/ProximaNova/ProximaNova-Bold.woff2") format("woff2"),
+    url("fonts/ProximaNova/ProximaNova-Bold.woff") format("woff");
     font-weight: 700;
     font-style: normal;
 }
