--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
 /*Common styles*/
 @use "base/fonts" as *;
 @use "vendor/normalize" as *;
+@use "vendor/choices-styles-reset" as *;
 @use "helpers/components" as *;
 @use "helpers/variables" as *;
+@use "UI/select" as *;
 
 * {
   font-family: "Proxima Nova", "Arial", sans-serif;
@@ -37,13 +39,32 @@ ul {
 }
 
 a {
-  -webkit-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
   transition: 0.2s linear;
+  text-decoration: none;
+}
+
+a:hover,
+button:hover {
+  opacity: 0.6;
 }
 
 img {
   pointer-events: none;
+}
+
+sup {
+  font-size: 70%;
+  top: -7px;
+  left: -5px;
+  margin-right: -5px;
+}
+
+button {
+  cursor: pointer;
+  background: none;
+  outline: none;
+  border: none;
+  transition: 0.2s linear;
 }
 
 .absolute-link {
@@ -74,4 +95,8 @@ img {
 
 .container {
   padding: 0 65px;
+}
+
+.content {
+  display: flex;
 }
