fix npm package styles import

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -5,7 +5,7 @@
                 <span class="header__menu-decor"></span>
                 <span class="header__menu-text">Меню</span>
             </div>
-            <div class="header__select select">
+            <div class="header__select-wrapper select-wrapper">
                 <select class="data__form-column-select select js-select js-input"
                         name="Выбрать квартиру">
                     <option value="Не выбрано" selected>Выбрать квартиру</option>
