--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 /*Common styles*/
 @use "base/fonts" as *;
 @use "vendor/normalize" as *;
+@use "vendor/dependencies" as *;
 @use "vendor/choices-styles-reset" as *;
 @use "helpers/components" as *;
 @use "helpers/variables" as *;
