--- a/src/styles/pages/index/blocks/_about.scss
+++ b/src/styles/pages/index/blocks/_about.scss
@@ -28,6 +28,8 @@
     }
 
     &-info {
+      margin-top: 133px;
+      flex: 0 1 734px;
 
       &-title,
       &-text {
@@ -46,6 +48,21 @@
       &-title {
         font-size: 34px;
         line-height: 1.4;
+        position: relative;
+        padding-top: 78px;
+        margin-bottom: 120px;
+
+        &::before {
+          content: '';
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          background-color: $mainColor;
+          width: 63px;
+          height: 12px;
+          border-radius: 2px;
+        }
       }
 
       &-text {
@@ -55,7 +72,23 @@
 
       &-video {
         display: flex;
-        background: url('/images/about-button-bg.png') no-repeat center;
+        margin-top: 100px;
+        max-width: 587px;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+
+        &::before {
+          content: '';
+          display: block;
+          position: absolute;
+          top: 50%;
+          left: 186px;
+          transform: translateY(-50%);
+          background-color: #D7D7D7;
+          width: 140px;
+          height: 1px;
+        }
 
         &-title {
           color: $black1;
@@ -63,6 +96,7 @@
           font-size: 18px;
           line-height: 1.6;
           text-transform: uppercase;
+          margin-top: 30px;
 
           & span {
             color: $gray;
@@ -72,6 +106,14 @@
             line-height: 1.6;
             text-transform: initial;
           }
+        }
+
+        &-button {
+          background: url('/images/about-button-bg.png') no-repeat center;
+          max-width: 241px;
+          width: 100%;
+          height: 241px;
+          border-radius: 50%;
         }
       }
     }
