--- a/src/styles/pages/index/blocks/_hero.scss
+++ b/src/styles/pages/index/blocks/_hero.scss
@@ -1,14 +1,22 @@
 @use "../../../helpers/variables" as *;
 
 .hero {
+  min-height: 100vh;
 
-  &__title {
-    color: $mainColor;
-    font-weight: 400;
-    font-size: 31px;
-    line-height: 1.4;
-    text-transform: uppercase;
-    max-width: 416px;
-    width: 100%;
+  &__content {
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 46px;
+
+    &-title {
+      color: $mainColor;
+      font-weight: 400;
+      font-size: 31px;
+      line-height: 1.4;
+      text-transform: uppercase;
+      max-width: 416px;
+      width: 100%;
+      transform: translateY(12px); //для полного соответствия макету
+    }
   }
 }
