--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -8,7 +8,7 @@
             <div class="header__select-wrapper select-wrapper">
                 <select class="data__form-column-select select js-select js-input"
                         name="Выбрать квартиру">
-                    <option value="Не выбрано" selected>Выбрать квартиру</option>
+                    <option value="Выбрать квартиру" selected>Выбрать квартиру</option>
                     <option value="Квартира 1">Квартира 1</option>
                     <option value="Квартира 2">Квартира 2</option>
                     <option value="Квартира 3">Квартира 3</option>
