--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,23 +1,57 @@
 @use "helpers/variables" as *;
 
 .header {
-  max-width: 1760px;
+  position: fixed;
+  z-index: 1000;
+  max-width: 1920px;
   width: 100%;
-  margin: 0 auto;
+  left: 50%;
+  transform: translateX(-50%);
+  background: $bodyBackground;
+
+  &.colored {
+    box-shadow: 0px 6px 90px -42px rgba(47, 128, 237, 1);
+    border-radius: 0 0 20px 20px;
+  }
 
   &__content {
+    justify-content: space-between;
     align-items: center;
     margin: 40px 0 38px;
   }
 
   &__menu {
     display: flex;
+    height: 17px;
+    position: relative;
 
-    &-decor {
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+    }
+
+    &::before {
+      top: 0;
+    }
+
+    &::after {
+      bottom: 0;
+    }
+
+
+    &-decor,
+    &::before,
+    &::after {
       display: block;
       width: 38px;
       height: 2px;
       background-color: $mainColor;
+    }
+
+    &-decor {
+      margin: auto 0;
     }
 
     &-text {
@@ -27,11 +61,18 @@
       line-height: 1;
       letter-spacing: 0.7px;
       text-transform: uppercase;
+      margin-left: 16px;
     }
   }
 
   &__select-wrapper {
     max-width: 242px;
+  }
+
+  &__logo-wrapper {
+    flex: 0 0 54%;
+    display: flex;
+    justify-content: center;
   }
 
   &__tel {
