--- a/src/styles/pages/index/blocks/_about.scss
+++ b/src/styles/pages/index/blocks/_about.scss
@@ -137,6 +137,11 @@
             height: 100%;
             background: url('/images/about-button-bg.png') no-repeat center;
             transition: 0.2s linear;
+
+            @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-resolution: 192dpi) {
+              background: url('/images/about-button-bg@2x.png') no-repeat center;
+              background-size: cover;
+            }
           }
 
           & span {
