--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -8,10 +8,18 @@
   left: 50%;
   transform: translateX(-50%);
   background: $bodyBackground;
+  border-radius: 0 0 20px 20px;
+  transition: 0.3s ease forwards;
 
   &.colored {
     box-shadow: 0px 6px 90px -42px rgba(47, 128, 237, 1);
-    border-radius: 0 0 20px 20px;
+  }
+
+  &.hidden {
+    opacity: 0;
+    z-index: -1;
+    pointer-events: none;
+    visibility: hidden;
   }
 
   &__content {
