--- a/src/styles/UI/form/_form.scss
+++ b/src/styles/UI/form/_form.scss
@@ -8,7 +8,8 @@
   width: 100%;
   margin: 197px auto 0;
 
-  &__wrapper {
+  &__content {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +24,7 @@
     color: $black0;
     margin-bottom: 50px;
   }
-  
+
   &__item {
     position: relative;
     width: 100%;
@@ -44,11 +45,27 @@
       font-weight: 400;
       line-height: 1;
       opacity: 0;
-      transition: 0.2s linear;
+      transition: 0.2s linear opacity;
+    }
+
+    &.email-error::after {
+      content: 'Некорректный e-mail';
+    }
+
+    &.phone-error::after {
+      content: 'Некорректный телефон';
+    }
+
+    &.error {
+      border-bottom: 1px solid #c30000;
     }
 
     &.error::after {
       opacity: 1;
+    }
+
+    &.error .input {
+      color: #c30000;
     }
   }
 
