--- a/src/styles/UI/form/components/_input.scss
+++ b/src/styles/UI/form/components/_input.scss
@@ -5,17 +5,12 @@
   font-size: 17px;
   line-height: 1.6;
   color: $black0;
-  padding: 29px 1px 10px;
+  padding: 29px 1px 12px;
   width: 100%;
   height: 100%;
-  border: 1px solid transparent;
+  border: none;
 }
 
 .input:focus {
   outline: none;
-}
-
-.error .input {
-  border: 1px solid #c30000;
-  color: #c30000;
 }
