--- a/src/styles/UI/form/_form.scss
+++ b/src/styles/UI/form/_form.scss
@@ -99,4 +99,20 @@
     text-transform: uppercase;
     color: $white;
   }
+
+  &__send-message {
+    position: absolute;
+    top: -100px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 15px;
+    border-radius: 20px;
+    border: 1px solid #2f80ed;
+    transition: 0.3s linear;
+    font-size: 20px;
+
+    &.active {
+      top: 20px;
+    }
+  }
 }
