add full video functional

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @use "UI/select" as *;
 @use "UI/form/form" as *;
 @use "UI/modal" as *;
+@use "UI/video" as *;
 
 * {
   font-family: "Proxima Nova", "Arial", sans-serif;
