--- a/src/styles/UI/_modal.scss
+++ b/src/styles/UI/_modal.scss
@@ -30,6 +30,7 @@
     pointer-events: initial;
     font-size: 25px;
     font-weight: 600;
+    max-width: 26px;
 
     &:hover {
       opacity: 0.4;
