--- a/src/styles/UI/form/components/_input.scss
+++ b/src/styles/UI/form/components/_input.scss
@@ -2,13 +2,17 @@
 
 .input {
   font-weight: 400;
-  font-size: 17px;
+  font-size: 16px;
   line-height: 1.6;
   color: $black0;
   padding: 29px 1px 12px;
   width: 100%;
   height: 100%;
   border: none;
+
+  @media (min-width: $desktop) {
+    font-size: 17px;
+  }
 }
 
 .input:focus {
