--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -6,6 +6,7 @@ $white: #FFFFFF;
 $gray: #898989;
 
 $desktop: 1770px;
+$desktopLow: 1440px;
 $laptop: 1280px;
 $tablet: 1024px;
-$mobile: 767px;
+$mobile: 768px;
