--- a/src/styles/UI/form/_form.scss
+++ b/src/styles/UI/form/_form.scss
@@ -13,6 +13,11 @@
     margin: 197px auto 100px;
   }
 
+  @media (max-width: $tablet) {
+    margin: 86px auto;
+    max-width: 370px;
+  }
+
   &__content {
     width: 100%;
     display: flex;
@@ -33,6 +38,12 @@
       font-size: 52px;
       margin-bottom: 50px;
     }
+
+    @media (max-width: $tablet) {
+      font-size: 28px;
+      line-height: 1.4;
+      margin-bottom: 20px;
+    }
   }
 
   &__item {
@@ -41,10 +52,14 @@
     border-bottom: 1px solid #CCCCCC;
 
     &:not(:last-of-type) {
-      margin-bottom: 11px;
+      margin-bottom: 20px;
 
       @media (min-width: $desktop) {
         margin-bottom: 19px;
+      }
+
+      @media (max-width: $tablet) {
+        margin-bottom: 16px;
       }
     }
 
@@ -100,9 +115,21 @@
       margin: 50px 0 30px;
     }
 
+    @media (max-width: $tablet) {
+      font-size: 11px;
+      line-height: 1.6;
+      margin: 51px 0 31px;
+    }
+
     & a {
       color: inherit;
       text-decoration: underline;
+    }
+
+    & br {
+      @media (max-width: $tablet) {
+        display: none;
+      }
     }
   }
 
@@ -122,6 +149,11 @@
     @media (min-width: $desktop) {
       max-width: 234px;
       font-size: 15px;
+    }
+
+    @media (max-width: $tablet) {
+      max-width: 170px;
+      padding: 20px 25px;
     }
   }
 
