--- a/src/styles/UI/form/components/_input.scss
+++ b/src/styles/UI/form/components/_input.scss
@@ -5,13 +5,18 @@
   font-size: 16px;
   line-height: 1.6;
   color: $black0;
-  padding: 29px 1px 12px;
+  padding: 20px 1px 22px;
   width: 100%;
   height: 100%;
   border: none;
 
   @media (min-width: $desktop) {
     font-size: 17px;
+  }
+
+  @media (max-width: $tablet) {
+    font-size: 14px;
+    padding: 29px 1px 10px;
   }
 }
 
