--- a/src/styles/pages/index/blocks/_about.scss
+++ b/src/styles/pages/index/blocks/_about.scss
@@ -7,6 +7,10 @@
     margin-bottom: 56px;
   }
 
+  @media (max-width: $tablet) {
+    margin-bottom: 29px;
+  }
+
   &__content {
     justify-content: space-between;
 
@@ -16,6 +20,14 @@
 
       @media (min-width: $desktop) {
         flex: 0 1 733px;
+      }
+
+      @media (max-width: $desktopLow) {
+        flex: 0 1 480px;
+      }
+
+      @media (max-width: $tablet) {
+        flex: 0 1 408px;
       }
 
       &-title {
@@ -31,6 +43,11 @@
           font-size: 17px;
           margin-bottom: 35px;
         }
+
+        @media (max-width: $tablet) {
+          font-size: 11px;
+          margin-bottom: 21px;
+        }
       }
 
       &-img {
@@ -45,6 +62,12 @@
           left: -308px;
         }
 
+        @media (max-width: $tablet) {
+          width: 768px;
+          top: 0px;
+          left: -179px;
+        }
+
         &-wrapper {
           height: 720px;
           overflow: hidden;
@@ -52,6 +75,10 @@
 
           @media (min-width: $desktop) {
             height: 900px;
+          }
+
+          @media (max-width: $tablet) {
+            height: 513px;
           }
         }
       }
@@ -68,6 +95,17 @@
           right: -132px;
           top: 173px;
         }
+
+        @media (max-width: $desktopLow) {
+          max-width: 148px;
+          right: -31px;
+        }
+
+        @media (max-width: $tablet) {
+          max-width: 148px;
+          top: 96px;
+          right: -74px;
+        }
       }
     }
 
@@ -78,6 +116,14 @@
       @media (min-width: $desktop) {
         margin-top: 133px;
         flex: 0 1 734px;
+      }
+
+      @media (max-width: $desktopLow) {
+        flex: 0 1 408px;
+      }
+
+      @media (max-width: $tablet) {
+        margin-top: 76px;
       }
 
       &-title,
@@ -111,6 +157,13 @@
           max-width: 477px;
         }
 
+        @media (max-width: $tablet) {
+          font-size: 19px;
+          max-width: 334px;
+          padding-top: 41px;
+          margin-bottom: 68px;
+        }
+
         &::before {
           content: '';
           display: block;
@@ -126,6 +179,11 @@
             width: 63px;
             height: 12px;
           }
+
+          @media (max-width: $tablet) {
+            width: 35px;
+            height: 6px;
+          }
         }
       }
 
@@ -140,6 +198,12 @@
         @media (max-width: $desktop) {
           max-width: 504px;
         }
+
+        @media (max-width: $tablet) {
+          font-size: 12px;
+          max-width: 334px;
+          line-height: 1.8;
+        }
       }
 
       &-video {
@@ -152,6 +216,11 @@
 
         @media (min-width: $desktop) {
           max-width: 587px;
+        }
+
+        @media (max-width: $tablet) {
+          margin-top: 60px;
+          max-width: 334px;
         }
 
         &::before {
@@ -169,6 +238,11 @@
             left: 186px;
             width: 140px;
           }
+
+          @media (max-width: $tablet) {
+            left: 113px;
+            width: 69px;
+          }
         }
 
         &-title {
@@ -183,6 +257,11 @@
             font-size: 18px;
           }
 
+          @media (max-width: $tablet) {
+            font-size: 10px;
+            margin-top: 24px;
+          }
+
           & span {
             color: $gray;
             display: block;
@@ -193,6 +272,10 @@
 
             @media (min-width: $desktop) {
               font-size: 18px;
+            }
+
+            @media (max-width: $tablet) {
+              font-size: 13px;
             }
           }
         }
@@ -211,6 +294,11 @@
           @media (min-width: $desktop) {
             max-width: 241px;
             height: 241px;
+          }
+
+          @media (max-width: $tablet) {
+            max-width: 133px;
+            height: 133px;
           }
 
           &:hover {
@@ -259,6 +347,13 @@
               font-size: 18px;
             }
 
+            @media (max-width: $tablet) {
+              width: 79px;
+              height: 79px;
+              font-size: 10px;
+              padding-left: 8px;
+            }
+
             &::before {
               content: '';
               display: block;
@@ -268,12 +363,20 @@
               width: 10px;
               height: 11px;
               background: url('/images/play-icon.svg') no-repeat center;
+              background-size: cover;
 
               @media (min-width: $desktop) {
                 top: 62px;
                 left: 37px;
                 width: 13px;
                 height: 14px;
+              }
+
+              @media (max-width: $tablet) {
+                width: 7px;
+                height: 8px;
+                top: 35px;
+                left: 20px;
               }
             }
           }
